took out the submit button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <form id="animal-form">
     <label for="animal-input"><a href="#" input id="addButton">Add an animal</label>
     <input type="text" id="animal-input"</>
-    <input id="addAnimal" type="submit" value="submit">
+    <!-- <input id="addAnimal" type="submit" value="submit"> -->
     </form>
     <br>
     <br>
