--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
+  <script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/reset.css">
   <script src="assets/giphy.js"></script>
